--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postinstall": "npm install --prefix backend && npm install --prefix frontend",
-    "build": "npm run build --prefix frontend",
+    "build": "npm ci --prefix backend && npm ci --prefix frontend --include=dev && npm run build --prefix frontend",
     "start": "npm run start --prefix backend"
-},
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Ankit-Maj/Interview-buddy.git"
